welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:13: error: '<-' expected but ')' found.
for (nbeff > nbpas)
                  ^Program:21: error: illegal start of simple expression
	}
        ^